--- a/.github/workflows/label.yml
+++ b/.github/workflows/label.yml
@@ -5,24 +5,15 @@
 # file with configuration.  For more information, see:
 # https://github.com/actions/labeler
 
-name: "Auto Labeler"
-on: 
-  pull_request:
-    types: [opened]
+name: "Pull Request Labeler"
+on:
+- pull_request_target
 
 jobs:
-  label:
-
-    runs-on: ubuntu-latest
+  labeler:
     permissions:
       contents: read
       pull-requests: write
-
+    runs-on: ubuntu-latest
     steps:
-    - name: "Checkout repository"
-      uses: actions/labeler@v4
-      
-    - name: "Apply labels"
-      uses: actions/labeler@v4
-      with:
-        repo-token: "${{ secrets.GITHUB_TOKEN }}"
+    - uses: actions/labeler@v5
