--- a/.github/workflows/labeler.yml
+++ b/.github/workflows/labeler.yml
@@ -16,4 +16,7 @@ jobs:
       pull-requests: write
     runs-on: ubuntu-latest
     steps:
+    - uses: actions/checkout@v4 # Uploads repository content to the runner
+      with:
+        repository: "Awasuru/INLS4_wszyscy-Pawel"
     - uses: actions/labeler@v5
