--- a/.github/workflows/labeler.yml
+++ b/.github/workflows/labeler.yml
@@ -5,18 +5,24 @@
 # file with configuration.  For more information, see:
 # https://github.com/actions/labeler
 
-name: "Pull Request Labeler"
-on:
-- pull_request_target
+name: "Auto Labeler"
+on: 
+  pull_request:
+    types: [opened]
 
 jobs:
-  labeler:
+  label:
+
+    runs-on: ubuntu-latest
     permissions:
       contents: read
       pull-requests: write
-    runs-on: ubuntu-latest
+
     steps:
-    - uses: actions/checkout@v4 # Uploads repository content to the runner
+    - name: "Checkout repository"
+      uses: actions/labeler@v4
+      
+    - name: "Apply labels"
+      uses: actions/labeler@v4
       with:
         repository: "Awasuru/INLS4_wszyscy-Pawel"
-    - uses: actions/labeler@v5
